# indonesian_stock_trading

./: README.md  requirements.txt
autoresearch/: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
notebook/: 00_financial_data_analysis.ipynb  01_stock_trading_eda.ipynb  02_stock_trading_modeling.ipynb  03_portfolio_optimization.ipynb  04_stock_trading_ml.ipynb
streamlit_eda/: README.md  pyproject.toml  streamlit_app.py
streamlit_eda/pages/: 1_Daily_Stock.py  2_Return_Distribution.py  3_Structural_Breaks.py  4_Seasonality.py  5_Volatility_Structure.py  6_External_Correlation.py  7_Strategy_Recommendation.py
streamlit_eda/src/: constant.py  sidebar.py  stats.py  utils.py  visualization.py
