[project]
name = "autoresearch-trading"
version = "0.1.0"
description = "Autonomous trading strategy research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.0",
    "TA-Lib>=0.4.28",
    "optuna>=3.4.0",
    "hyperopt>=0.2.7",
    "statsmodels>=0.14.0",
]
